--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
 
       <div class="red-panda">
         <!-- insert picture element -->
+        <picture>
+          <source media="(max-width: 600px)" srcset="redpandaportrait600.jpg">
+          <source media="(min-width: 601px)" srcset="redpanda1200.jpg">
+          <img src="redpanda1200.jpg" alt="Red panda">
+        </picture>
       </div>
 
     </main>
